--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Phaser with a sprinkle of ES6 Dust!</title>
 	<link rel="stylesheet" href="styles/main.css">
+        <!-- Elegant way to handle font loading problems -->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google: {
+                families: ['Press+Start+2P::latin']
+            }
+        });
+    </script>
 </head>
 <body>
 	<div id="content"></div>
